# term-msg-rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  server.rs
