[package]
name = "term-msg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.17.0"
rand = "0.8.5"
ron = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.26.0", features = ["full"]}
